--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,5 +26,9 @@
     "preact-router": "3.1.0",
     "rough-viz": "1.0.5",
     "throttle-debounce": "2.1.0"
+  },
+  "resolutions": {
+    "mem": ">=4.0.0",
+    "js-yaml": ">=3.13.1"
   }
 }
