--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "yarn": "1.19"
   },
   "scripts": {
-    "build": "yarn --cwd frontend install && yarn --cwd frontend build"
+    "build": "cd frontend && yarn install && yarn build"
   }
 }
