--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "license": "MPL-2.0",
   "scripts": {
     "start": "if-env NODE_ENV=production && yarn run -s serve || yarn run -s dev",
-    "build": "preact build",
+    "build": "./node_modules/.bin/preact build",
     "serve": "preact build && preact serve",
     "dev": "preact watch",
     "test": "eslint src && preact test"
