--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "yarn": "1.19"
   },
   "scripts": {
-    "build": "cd frontend && yarn install && yarn build"
+    "build": "cd frontend && yarn install && ls -l node_modules/.bin && yarn build"
   }
 }
