--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "gitbusy",
   "license": "MPL-2.0",
   "engines": {
-    "node": ">=12",
-    "yarn": ">=1.19"
+    "yarn": "1.x"
   },
   "scripts": {
-    "build": "ls -l node_modules && cd frontend && yarn install && ls -l node_modules/.bin && yarn build"
+    "build": "cd frontend && yarn install && ls -l node_modules/.bin && yarn build"
   }
 }
