--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
     "yarn": "1.x"
   },
   "scripts": {
-    "postinstall": "cd frontend && yarn install && yarn build"
+    "postinstall": "cd frontend && yarn install && ls -l node_modules && yarn build"
   }
 }
