--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,8 @@
   },
   "resolutions": {
     "mem": ">=4.0.0",
-    "js-yaml": ">=3.13.1"
+    "js-yaml": ">=3.13.1",
+    "serialize-javascript": ">=2.1.1",
+    "mime": ">=1.4.1"
   }
 }
